--- a/Projeto3-DiaMundialDaEnergia/Impor.html
+++ b/Projeto3-DiaMundialDaEnergia/Impor.html
@@ -41,6 +41,7 @@
     </div>
     <div class="b">
         A energia elétrica é um recurso indispensável em todas atividades da sociedade moderna, principalmente quando existem trabalhos que podem ser feitos remotamente e levando em conta que passamos mais tempo em casa. A energia proporciona o funcionamento de eletrodomésticos e eletrônicos que trazem lazer, comunicação e segurança. Vale lembrar que o maior gasto de energia é proveniente das atividades agrícolas, industriais e comerciais que movimenta a economia e desenvolve as comunidades.
+        <p>A finalidade deste dia consiste em sensibilizar e motivar as pessoas quanto à necessidade de poupar energia, além de alertar sobre os seus impactes ambientais e a importância de preservar os recursos naturais.</p>
     </div>
 </body>
 </html>
