--- a/Projeto3-DiaMundialDaEnergia/Origem.html
+++ b/Projeto3-DiaMundialDaEnergia/Origem.html
@@ -40,7 +40,8 @@
         </h1>
     </div>
     <div class="b">
-        Com o ambientalismo contemporâneo crescendo cada vez mais na década de 60, começaram a surgir diversos movimento de apoio à causa. Mas somente em 1981, em Portugal, que a Direção Geral de Energia de Portugal teve a iniciativa de definir uma data especifíca para abordar sobre o tema.
+        Com o ambientalismo contemporâneo crescendo cada vez mais na década de 60, começaram a surgir diversos movimento de apoio à causa. Mas somente em 1981, em Portugal, que a Direção Geral de Energia e Geologia de Portugal teve a iniciativa de definir uma data especifíca para abordar sobre o tema.
+        <p></p>
     </div>
 </body>
 
