--- a/Projeto3-DiaMundialDaEnergia/index.html
+++ b/Projeto3-DiaMundialDaEnergia/index.html
@@ -45,7 +45,7 @@
 
     <div class="b">
         O Dia Mundial da Energia é celebrado anualmente em 29 de maio. Esta data foi criada com o intuito de motivar uma
-        conscientização sobre a importância da poupança de energia e incentivo ao uso de energias renováveis. Este dia marca a celebração da energia elétrica como um dos bens mais valiosos da atualidade, parte imprescindível do dia a dia das pessoas e uma verdadeira força-motriz da economia
+        conscientização sobre a importância da poupança de energia e incentivo ao uso de energias renováveis. Este dia marca a celebração da energia elétrica como um dos bens mais valiosos da atualidade, parte imprescindível do dia a dia das pessoas e uma verdadeira força-motriz da economia. Este dia também é importante para promover as energias renováveis.
     </div>
     
 </body>
